scss/style.scss
/* ... */
.checklist {
    padding-left: 1.375rem;

    &.inline {
        padding-left: 0;
    }

    li {
        list-style: none;
        display: flex;
        align-items: flex-start;
        margin-bottom: 0.8rem;
        font-weight: 500;

        &:before {
            //checkmark character
            content: "";
            aspect-ratio: 1;
            background: linear-gradient(0deg, $dark-gray 0%, $dark-gray 100%);
            clip-path: shape(from 43% 73%,line to 78.25% 37.75%,line to 71.25% 30.75%,line to 43% 59%,line to 28.75% 44.75%,line to 21.75% 51.75%,line to 43% 73%,close,move to 50% 100%,curve to 30.5% 96.06% with 43.08% 100%/36.58% 98.69%,curve to 14.63% 85.38% with 24.42% 93.44%/19.12% 89.88%,curve to 3.94% 69.5% with 10.13% 80.88%/6.56% 75.58%,curve to 0% 50% with 1.31% 63.42%/0% 56.92%,curve to 3.94% 30.5% with 0% 43.08%/1.31% 36.58%,curve to 14.63% 14.63% with 6.56% 24.42%/10.13% 19.12%,curve to 30.5% 3.94% with 19.12% 10.13%/24.42% 6.56%,curve to 50% 0% with 36.58% 1.31%/43.08% 0%,curve to 69.5% 3.94% with 56.92% 0%/63.42% 1.31%,curve to 85.38% 14.63% with 75.58% 6.56%/80.88% 10.13%,curve to 96.06% 30.5% with 89.88% 19.12%/93.44% 24.42%,curve to 100% 50% with 98.69% 36.58%/100% 43.08%,curve to 96.06% 69.5% with 100% 56.92%/98.69% 63.42%,curve to 85.38% 85.38% with 93.44% 75.58%/89.88% 80.88%,curve to 69.5% 96.06% with 80.88% 89.88%/75.58% 93.44%,curve to 50% 100% with 63.42% 98.69%/56.92% 100%,close);
            color: $blue;
            display: inline-block;
            width: 1.375rem;
            height: 1.375rem;
            margin-right: 1rem;
            margin-top: 0.1rem;
        }
    }

    &.dark {
        li:before {
            background: linear-gradient(0deg, $dark-gray 0%, $dark-gray 100%);
        }
    }
}

.divider {
    display: flex;
    align-items: center;
    gap: 1.25rem;

    &:before {
        content: "";
        height: 1px;
        background-color: $light-gray;
        flex-grow: 1;
    }

    &:after {
        content: "";
        height: 1px;
        background-color: $light-gray;
        flex-grow: 1;
    }
}

[data-featured="2"] {
    @media screen and (min-width: 992px) {
        grid-column: span 8!important;
        grid-template-columns: 1fr 1fr;
        grid-column-gap: 0;
        grid-template-rows: 1fr;
        
        .post-img-wrap {
            aspect-ratio: unset;
            height: 100%;
        }
    }

    @media screen and (max-width: 991px) {
        grid-column: span 12!important;
    }

}

[data-featured="3"] {
    @media screen and (min-width: 992px) {
        grid-column: span 12!important;
        grid-template-columns: 1fr 1fr;
        grid-column-gap: 0;
        grid-template-rows: 1fr;

        .post-img-wrap {
            aspect-ratio: unset;
        }
    }
}

[data-featured="4"] {
    width: 40vw;

    @media screen and (max-width: 991px) {
        width: 80vw;
    }
}

.post {
    opacity: 0;
    transition: all 1s $bezier;
    animation: fadeIn 1s $bezier forwards;
}

@keyframes fadeIn {
    from {
        opacity: 0;
        transform: translateY(10rem);
    }
    to {
        opacity: 1;
        transform: translateY(0);
    }
}

.fadetest {
    opacity: 0;
    transition: all 1s $bezier;
}

.solutions-block {
    .solution {
        .solution-hover {
            opacity: 0;
            scale: 0.7;
            transition: opacity 1s $bezier, scale 1s $bezier;

            @media screen and (max-width: 991px) {
                opacity: 0.8;
                scale: 1;
            }
        }

        &:first-of-type {
            .solution-hover {
                @media screen and (min-width: 992px) {
                    border-top-left-radius: 1.625rem;
                    border-bottom-left-radius: 1.625rem;
                }
            }
        }

        &:last-of-type {
            .solution-hover {
                @media screen and (min-width: 992px) {
                    border-top-right-radius: 1.625rem;
                    border-bottom-right-radius: 1.625rem;
                }
            }
        }

        &:hover {
            .solution-hover {
                opacity: .85;
                scale: 1;
            }
        }
    }
}

// Filters
.filter-links {
    .filter-link {
        input {
            display: none;
            &:checked+.w-form-label {
                &:after {
                    width: 100%;
                }
            }
        }

        .w-form-label {
            position: relative;
            padding-bottom: 1rem;
            padding-top: 1rem;
            
            &:after {
                content: "";
                position: absolute;
                background-image: linear-gradient(90deg, $blue 0%, $light-blue 100%);
                height: 4px;
                width: 0%;
                bottom: 0;
                left: 50%;
                transform: translateX(-50%);
                transition: width 1s $bezier;
            }
        }
    }
}

.toc-link {
    &:hover {
        opacity: 1;

        &:before {
            height: 100%;
        }
    }

    &:before {
        content: "";
        position: absolute;
        background-image: linear-gradient(90deg, $blue 0%, $light-blue 100%);
        width: 4px;
        height: 0%;
        top: 50%;
        transform: translateY(-50%);
        right: 100%;
        border-radius: 2px;
        transition: height 1s $bezier;
    }
}

.blog-post-text {
    figure {
        margin-bottom: 2em;
    }

    ul {
        margin-bottom: 2rem;
    }

    li {
        list-style: disc;
        margin-bottom: 0.6rem;
        font-weight: 500;
        position: relative;
    }
}

// Recurrent combo classes
.margin-bottom {
    margin-bottom: 6.25rem;

    &-small {
        margin-bottom: 3.75rem;
    }
}
/* ... */

